--- a/projeto/src/componentes/pages/style.css
+++ b/projeto/src/componentes/pages/style.css
@@ -1,11 +1,6 @@
-button{
-    width: 200px;
-    color: white;
-    background-color: black;
-    margin: auto;
-    margin-top:100px;
-}
-h1{
+
+
+.Cronometo{
     text-align: center;
     color: black;
 }
